# Piano128keys

./: ARCHITECTURE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile.cpp  Dockerfile.python  Dockerfile.rust  GITHUB_SETUP.md  LICENSE  README.md  cpp_backend.cpp  database_schema.sql  docker-compose.yml  package.json  piano.jsx  python_backend.py  requirements.txt  rust_backend.rs  setup.sh  vite.config.js
